Fix scrollbar, TasksHistory and styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
 box-sizing: border-box;
 margin: 0;
-min-height: 100vh;
 background: linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
